--- a/bower.json
+++ b/bower.json
@@ -49,6 +49,7 @@
   },
   "moduleType": [],
   "resolutions": {
-    "neon-animation": "^1.1.0"
+    "neon-animation": "^1.1.0",
+    "paper-styles": "~1.0.12"
   }
 }
